--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header id="home" class="hero-section">
         <div class="container">
             <div class="profile-container">
-                <img src="images/gandamo.jpg" alt="Ysabelle's Profile Picture" class="profile-image">
+                <img src="./images/gandamo.jpg" alt="Ysabelle's Profile Picture" class="profile-image">
                 <div class="profile-text">
                     <h1 class="main-heading">
                         <span class="brown-text">Bonjour,</span>
