--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="services.html">Commission</a></li>
-                </ul>
+            </ul>
         </div>
     </nav>
 
@@ -27,7 +27,7 @@
 
         <!-- Profile Section -->
         <div class="profile-section">
-            <img src="images/gandamo.jpg" alt="Ysabelle's Commission" class="profile-pic">
+            <img src="./images/gandamo.jpg" alt="Ysabelle's Commission" class="profile-pic">
             <div>
                 <h1 class="profile-name">Commission Section ⋆˚✿˖°</h1>
                 <p class="profile-username">@yssamrcd</p>
@@ -41,35 +41,35 @@
         <div class="services-grid">
             <!-- Service 1 -->
             <div class="service-item">
-                <img src="images/dior.jpg" alt="Graphic Design" class="service-image">
+                <img src="./images/dior.jpg" alt="Graphic Design" class="service-image">
                 <h2>Graphic Design</h2>
                 <p>Creating stunning graphics for brands, social media, and events to enhance your visual identity.</p>
             </div>
 
             <!-- Service 2 -->
             <div class="service-item">
-                <img src="images/vw.jpg" alt="Photo Editing" class="service-image">
+                <img src="./images/vw.jpg" alt="Photo Editing" class="service-image">
                 <h2>Photo Editing</h2>
                 <p>Professional photo editing services to enhance your images and make them stand out.</p>
             </div>
 
             <!-- Service 3 -->
             <div class="service-item">
-                <img src="images/twins.jpg" alt="Digital Illustration" class="service-image">
+                <img src="./images/twins.jpg" alt="Digital Illustration" class="service-image">
                 <h2>Digital Illustration</h2>
                 <p>Custom digital illustrations tailored to your ideas, bringing your concepts to life.</p>
             </div>
 
             <!-- Service 4 -->
             <div class="service-item">
-                <img src="images/pray.jpg" alt="Branding" class="service-image">
+                <img src="./images/pray.jpg" alt="Branding" class="service-image">
                 <h2>Branding</h2>
                 <p>Developing cohesive branding strategies that reflect your unique identity and resonate with your audience.</p>
             </div>
 
             <!-- Service 5 -->
             <div class="service-item">
-                <img src="images/red.jpg" alt="Social Media Management" class="service-image">
+                <img src="./images/red.jpg" alt="Social Media Management" class="service-image">
                 <h2>Social Media Management</h2>
                 <p>Managing your social media presence with engaging content and strategies to boost your online visibility.</p>
             </div>
@@ -96,4 +96,3 @@
     </footer>
 </body>
 </html>
-
