--- a/skills.html
+++ b/skills.html
@@ -16,24 +16,21 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="services.html">Commission</a></li>
-                </ul>
+            </ul>
         </div>
     </nav>
 
     <!-- Skills Section -->
     <section class="skills-page">
-
-        <!-- Skills Page -->
-<section class="skills-page">
-    <div class="cover-header"></div>
+        <div class="cover-header"></div>
 
         <!-- Profile Section -->
         <div class="profile-section">
-            <img src="images/gandamo.jpg" alt="Ysabelle's Skills" class="profile-pic">
+            <img src="./images/gandamo.jpg" alt="Ysabelle's Skills" class="profile-pic">
             <div>
                 <h1 class="profile-name">Skills Section ⋆˚✿˖°</h1>
                 <p class="profile-username">@yssamrcd</p>
-                <p class="profile-bio">Check out my skills! I love using tools like graphic design and digital illustration to create cool stuff. Whether it’s for social media or personal projects, I’m all about making things look great! ꣑ৎ  </p>
+                <p class="profile-bio">Check out my skills! I love using tools like graphic design and digital illustration to create cool stuff. Whether it’s for social media or personal projects, I’m all about making things look great! ꣑ৎ</p>
             </div>
         </div>
 
@@ -43,35 +40,35 @@
         <div class="skills-grid">
             <!-- Skill 1 -->
             <div class="skill-item">
-                <img src="images/lana.jpg" alt="Canva" class="skill-image">
+                <img src="./images/lana.jpg" alt="Canva" class="skill-image">
                 <h2>Canva</h2>
                 <p>Utilize Canva for creating stunning graphics, social media posts, and presentations with ease.</p>
             </div>
 
             <!-- Skill 2 -->
             <div class="skill-item">
-                <img src="images/mug.jpg" alt="PicsArt" class="skill-image">
+                <img src="./images/mug.jpg" alt="PicsArt" class="skill-image">
                 <h2>PicsArt</h2>
                 <p>Skilled in using PicsArt for photo editing and creating eye-catching collages and designs.</p>
             </div>
 
             <!-- Skill 3 -->
             <div class="skill-item">
-                <img src="images/kish.jpg" alt="Ibis Paint" class="skill-image">
+                <img src="./images/kish.jpg" alt="Ibis Paint" class="skill-image">
                 <h2>Ibis Paint</h2>
                 <p>Experienced with Ibis Paint for digital painting and illustrations, bringing creative ideas to life.</p>
             </div>
 
             <!-- Skill 4 -->
             <div class="skill-item">
-                <img src="images/lw.jpg" alt="Polarr" class="skill-image">
+                <img src="./images/lw.jpg" alt="Polarr" class="skill-image">
                 <h2>Polarr</h2>
                 <p>Proficient in Polarr for advanced photo editing, enhancing images with professional-grade filters and adjustments.</p>
             </div>
 
             <!-- Skill 5 -->
             <div class="skill-item">
-                <img src="images/rabbit.jpg" alt="Phonto" class="skill-image">
+                <img src="./images/rabbit.jpg" alt="Phonto" class="skill-image">
                 <h2>Phonto</h2>
                 <p>Utilize Phonto for adding stylish text and typography to images, perfect for social media graphics.</p>
             </div>
